--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">GreenPulse</string>
+    <string name="disease_analyzer">Sick Leaf Scanner</string>
+    <string name="trends">AgriPulse:Stay Updated with Farming Trends</string>
+    <string name="map">Mapping Your Way to Healthier Harvests</string>
+    <string name="bot">AgriHelp: Your AI Farming Expert</string>
+    <string name="social">AgriConnect: Share, React, and Connect with Farmers Worldwide</string>
+
+
 </resources>
